--- a/Bytbank.SistemaAgencia/Bytbank.SistemaAgencia.csproj
+++ b/Bytbank.SistemaAgencia/Bytbank.SistemaAgencia.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bytbank.Modelos\Bytbank.Modelos.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
